--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       </div>
       <div class="second__section">
         <div class="second__card">
-          <div class="second__img"></div>
           <div class="second__content">
             <h2 class="second__tittle">Grow Together</h2>
             <p class="second__text">
@@ -76,9 +75,14 @@
               miss out on with a feedback form.
             </p>
           </div>
+          <div class="second__img">
+            <img src="./images/illustration-grow-together.svg" alt="" />
+          </div>
         </div>
         <div class="second__card">
-          <div class="second__img"></div>
+          <div class="second__img">
+            <img src="./images/illustration-flowing-conversation.svg" alt="" />
+          </div>
           <div class="second__content">
             <h2 class="second__tittle">Flowing Conversations</h2>
             <p class="second__text">
@@ -89,7 +93,6 @@
           </div>
         </div>
         <div class="second__card">
-          <div class="second__img"></div>
           <div class="second__content">
             <h2 class="second__tittle">Your Users</h2>
             <p class="second__text">
@@ -97,6 +100,9 @@
               authentication solution. This means, once signed in to your app,
               your users can start chatting immediately.
             </p>
+          </div>
+          <div class="second__img">
+            <img src="./images/illustration-your-users.svg" alt="" />
           </div>
         </div>
       </div>
