--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
         </div>
       </div>
       <div class="call">
-        <h3 class="call__tittle">Ready To Build Your Community?</h3>
-        <a href="#" class="call__btn">Get Started For Free</a>
+        <div class="call__inner">
+          <h3 class="call__tittle">Ready To Build Your Community?</h3>
+          <a href="#" class="call__btn">Get Started For Free</a>
+        </div>
       </div>
     </main>
 
