--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="second__section">
+      <div class="second__section container">
         <div class="second__card">
           <div class="second__content">
             <h2 class="second__tittle">Grow Together</h2>
