--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a class="first__btn" href="#">Get Started For Free</a>
           </div>
           <div class="first__img">
-            <img src="./images/illustration-mockups.svg" alt="" />
+            <img src="./images/illustration-mockups.svg" alt="Ilustration" />
           </div>
         </div>
       </div>
@@ -80,12 +80,18 @@
             </p>
           </div>
           <div class="second__img">
-            <img src="./images/illustration-grow-together.svg" alt="" />
+            <img
+              src="./images/illustration-grow-together.svg"
+              alt="Ilustration"
+            />
           </div>
         </div>
         <div class="second__card">
           <div class="second__img">
-            <img src="./images/illustration-flowing-conversation.svg" alt="" />
+            <img
+              src="./images/illustration-flowing-conversation.svg"
+              alt="Ilustration"
+            />
           </div>
           <div class="second__content">
             <h2 class="second__tittle">Flowing Conversations</h2>
@@ -106,7 +112,7 @@
             </p>
           </div>
           <div class="second__img">
-            <img src="./images/illustration-your-users.svg" alt="" />
+            <img src="./images/illustration-your-users.svg" alt="Ilustration" />
           </div>
         </div>
       </div>
@@ -176,18 +182,18 @@
         </div>
         <div class="footer__column">
           <div class="footer__links">
-            <a href="" class="footer__link">About Us</a>
-            <a href="" class="footer__link"> What We Do</a>
+            <a href="#" class="footer__link">About Us</a>
+            <a href="#" class="footer__link"> What We Do</a>
 
-            <a href="" class="footer__link">FAQ</a>
+            <a href="#" class="footer__link">FAQ</a>
           </div>
         </div>
         <div class="footer__column">
           <div class="footer__links">
-            <a href="" class="footer__link">Career</a>
-            <a href="" class="footer__link">Blog</a>
+            <a href="#" class="footer__link">Career</a>
+            <a href="#" class="footer__link">Blog</a>
 
-            <a href="" class="footer__link">Contact Us</a>
+            <a href="#" class="footer__link">Contact Us</a>
           </div>
         </div>
         <div class="footer__column">
@@ -231,14 +237,17 @@
               /></svg
           ></a>
         </div>
-        <!-- <p class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
-        </p> -->
       </div>
       <div class="copy">&copy; Copyright 2018 Huddle. All rights reserved.</div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a target="_blank" href="https://www.instagram.com/luisherrerael"
+          >Luis Herrera⚡</a
+        >.
+      </div>
     </footer>
   </body>
 </html>
