--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__column">
-          <a href="#" class="footer__logo"
+          <span class="footer__logo"
             ><svg width="240" height="39" xmlns="http://www.w3.org/2000/svg">
               <g fill-rule="nonzero" fill="none">
                 <path
@@ -139,7 +139,7 @@
                   fill="#fff"
                 />
               </g></svg
-          ></a>
+          ></span>
           <div class="footer__item">
             <div class="footer__item-logo">
               <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
